娣诲姞瑁呭鍜岃儗鍖呯户鎵裤€佺涓夎瑙掑垏鎹€佽鑹叉湞鍚戣窡闅忛暅澶淬€佸垎韬璺郴缁熺瓑鍔熻兘

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/ui.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.module.js",
+            "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.128.0/examples/jsm/"
+        }
+    }
+    </script>
     <script type="module" src="src/main.js"></script>
 </head>
 
